@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?><scraper name="csfdcz" date="2017-11-03" framework="1.1">
+<?xml version="1.0" encoding="UTF-8"?><scraper name="csfdcz" date="2025-05-12" framework="1.1">
 
 	<!-- input : $$1=nfo file -->
 	<!-- output: <url>*</url> -->
@@ -15,26 +15,31 @@
 	<!-- output: $$10=user-agent -->
 	<!-- output: $$8=search url object -->
     <CreateSearchUrl clearbuffers="no" dest="8">
-     <RegExp output="user-agent=Mozilla%2F5.0%20%28Windows%20NT%206.1%3B%20Win64%3B%20x64%29%20AppleWebKit%2F537.36%20%28KHTML%2C%20like%20Gecko%29%20Chrome%2F78.0.3904.97%20Safari%2F537.36" dest="10"><expression/></RegExp>
+        <RegExp output="user-agent=Mozilla%2F5.0%20%28Windows%20NT%206.1%3B%20Win64%3B%20x64%29%20AppleWebKit%2F537.36%20%28KHTML%2C%20like%20Gecko%29%20Chrome%2F78.0.3904.97%20Safari%2F537.36" dest="10"><expression/></RegExp>
+        <RegExp conditional="titlepartsremove" input="$$1" output="\1" dest="1">
+            <expression noclean="1">(.*)%20part%20\d+$</expression>
+        </RegExp>
+        <RegExp input="$$1" output="-\1" dest="9+">
+            <expression repeat="yes">(.+?)(?:%20|$)</expression>
+        </RegExp>
+        <RegExp input="$$1" output=" \1" dest="5+">
+            <expression repeat="yes">(.+?)(?:%20|$)</expression>
+        </RegExp>
+        <RegExp input="$$5" output="\1" dest="5">
+            <expression repeat="no"> (.*)</expression>
+        </RegExp>
+        <RegExp input="$$1" output="\1" dest="4">
+            <expression repeat="no">(.+?)(?:%20|$)</expression>
+        </RegExp>
+        <RegExp input="$$2" output="\1" dest="3">
+            <expression>(\d+)</expression>
+        </RegExp>
+        <!-- query name only -->
         <RegExp input="$$1" output="&lt;url gzip=&quot;yes&quot; cache=&quot;CSFD.hledat-\1-$$3.html&quot;&gt;https://www.csfd.cz/hledat/?q=\1|$$10&lt;/url&gt;" dest="8">
-            <RegExp conditional="titlepartsremove" input="$$1" output="\1" dest="1">
-                <expression noclean="1">(.*)%20part%20\d+$</expression>
-            </RegExp>
-            <RegExp input="$$1" output="-\1" dest="9+">
-                <expression repeat="yes">(.+?)(?:%20|$)</expression>
-            </RegExp>
-            <RegExp input="$$1" output=" \1" dest="5+">
-                <expression repeat="yes">(.+?)(?:%20|$)</expression>
-            </RegExp>
-            <RegExp input="$$5" output="\1" dest="5">
-                <expression repeat="no"> (.*)</expression>
-            </RegExp>
-            <RegExp input="$$1" output="\1" dest="4">
-                <expression repeat="no">(.+?)(?:%20|$)</expression>
-            </RegExp>
-            <RegExp input="$$2" output="\1" dest="3">
-                <expression>(\d+)</expression>
-            </RegExp>
+            <expression noclean="1"/>
+        </RegExp>
+        <!-- query name and year -->
+        <RegExp conditional="queryyear" input="$$1" output="&lt;url gzip=&quot;yes&quot; cache=&quot;CSFD.hledat-\1-$$3.html&quot;&gt;https://www.csfd.cz/hledat/?q=\1+$$3|$$10&lt;/url&gt;" dest="8">
             <expression noclean="1"/>
         </RegExp>
     </CreateSearchUrl>
@@ -46,7 +51,6 @@
     <GetSearchResults clearbuffers="no" dest="8">
         <RegExp input="$$7" output="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;yes&quot;?&gt;&lt;results sorted=&quot;yes&quot;&gt;\1&lt;/results&gt;" dest="8">
            <RegExp input="$$6" output="&lt;entity&gt;&lt;title&gt;\2\3 \4&lt;/title&gt;&lt;url gzip=&quot;yes&quot; cache=&quot;CSFD.prehled-\1.html&quot;&gt;https://www.csfd.cz/film/\1/prehled/|$$10&lt;/url&gt;&lt;/entity&gt;" dest="7">
-
                 <!-- extract search-list -->
                 <RegExp conditional="!csfdsearchext" input="$$1" output="\1" dest="1">
                     <expression repeat="no" noclean="1">&lt;div class=&quot;box-content[^&quot;]*?&quot;&gt;(.*?)&lt;div class=&quot;box-content</expression>
@@ -54,19 +58,19 @@
                 <!-- hlavni nabidka -->
                 <!-- force name & year --> 
                 <RegExp conditional="czfilenames" input="$$1" output="&lt;u&gt;\1&lt;/u&gt;&lt;t&gt;\2&lt;/t&gt;&lt;t1&gt; \4&lt;/t1&gt;&lt;t2&gt; (\3)&lt;/t2&gt;" dest="6+">
-                        <expression repeat="no" noclean="1,2">&lt;a href=&quot;\/film\/(?i)(\d+$$9)[^\/]*?\/&quot; class=&quot;film-title-name&quot;&gt;([^&lt;]*)[^\(]*?\(($$3)\)&lt;\/span&gt;(.*?)&lt;\/h3&gt;</expression>
+                    <expression repeat="no" noclean="1,2">&lt;a href=&quot;\/film\/(?i)(\d+$$9)[^\/]*?\/&quot; class=&quot;film-title-name&quot;&gt;([^&lt;]*)[^\(]*?\(($$3)\)&lt;\/span&gt;(.*?)&lt;\/h3&gt;</expression>
                 </RegExp>
                 <!-- force search name & year -->
                  <RegExp input="$$1" output="&lt;u&gt;\1&lt;/u&gt;&lt;t&gt;\2&lt;/t&gt;&lt;t1&gt; \4&lt;/t1&gt;&lt;t2&gt; (\3)&lt;/t2&gt;" dest="6+">
-                        <expression repeat="no" noclean="1,2">&lt;a href=&quot;\/film\/([^\/]*?)\/&quot; class=&quot;film-title-name&quot;&gt;([^&lt;]*)[^\(]*\(($$3)\)&lt;\/span&gt;([^:]*?&lt;p class=&quot;search-name&quot;&gt;(?i)\($$5.*?)&lt;\/p&gt;</expression>
+                    <expression repeat="no" noclean="1,2">&lt;a href=&quot;\/film\/([^\/]*?)\/&quot; class=&quot;film-title-name&quot;&gt;([^&lt;]*)[^\(]*\(($$3)\)&lt;\/span&gt;([^:]*?&lt;p class=&quot;search-name&quot;&gt;(?i)\($$5.*?)&lt;\/p&gt;</expression>
                 </RegExp>
                 <!-- force first word & year -->
-<!--                <RegExp conditional="czfilenames" input="$$1" output="&lt;u&gt;\1&lt;/u&gt;&lt;t&gt;\2&lt;/t&gt;&lt;t1&gt; \4&lt;/t1&gt;&lt;t2&gt; (\3)&lt;/t2&gt;" dest="6+">
-                        <expression repeat="no" noclean="1,2">&lt;a href=&quot;\/film\/(?i)(\d+-$$4[^\/]*)\/&quot; class=&quot;film-title-name&quot;&gt;([^&lt;]*)[^\(]*\(($$3)\)&lt;\/span&gt;(.*?)&lt;\/h3&gt;</expression>
+                <!-- <RegExp conditional="czfilenames" input="$$1" output="&lt;u&gt;\1&lt;/u&gt;&lt;t&gt;\2&lt;/t&gt;&lt;t1&gt; \4&lt;/t1&gt;&lt;t2&gt; (\3)&lt;/t2&gt;" dest="6+">
+                     <expression repeat="no" noclean="1,2">&lt;a href=&quot;\/film\/(?i)(\d+-$$4[^\/]*)\/&quot; class=&quot;film-title-name&quot;&gt;([^&lt;]*)[^\(]*\(($$3)\)&lt;\/span&gt;(.*?)&lt;\/h3&gt;</expression>
                 </RegExp> -->
                 <!-- force first word of search name & year -->
                 <RegExp input="$$1" output="&lt;u&gt;\1&lt;/u&gt;&lt;t&gt;\2&lt;/t&gt;&lt;t1&gt; \4&lt;/t1&gt;&lt;t2&gt; (\3)&lt;/t2&gt;" dest="6+">
-                        <expression repeat="no" noclean="1,2">&lt;a href=&quot;\/film\/([^\/]*?)\/&quot; class=&quot;film-title-name&quot;&gt;([^&lt;]*)[^\(]*\(($$3)\)&lt;\/span&gt;([^:]*?&lt;p class=&quot;search-name&quot;&gt;(?i)\($$4.*?)&lt;\/p&gt;</expression>
+                    <expression repeat="no" noclean="1,2">&lt;a href=&quot;\/film\/([^\/]*?)\/&quot; class=&quot;film-title-name&quot;&gt;([^&lt;]*)[^\(]*\(($$3)\)&lt;\/span&gt;([^:]*?&lt;p class=&quot;search-name&quot;&gt;(?i)\($$4.*?)&lt;\/p&gt;</expression>
                 </RegExp>
                  <!-- force year only -->                  
                 <RegExp input="$$1" output="&lt;u&gt;\1&lt;/u&gt;&lt;t&gt;\2&lt;/t&gt;&lt;t1&gt; \4&lt;/t1&gt;&lt;t2&gt; (\3)&lt;/t2&gt;" dest="6+">
